<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="#e2e2e2"
              android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ll_menu_item_health"
        style="@style/MenuItemLayoutStyle" >

        <ImageView
            style="@style/LeftMenuItemImageViewStyle"
            android:background="@drawable/selector_left_menu_health"
            android:contentDescription="@null" />

        <TextView
            style="@style/LeftMenuItemTextViewStyle"
            android:gravity="center"
            android:text="@string/left_menu_helth" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#d2d2d2" />


    <LinearLayout
        android:id="@+id/ll_menu_item_life"
        style="@style/MenuItemLayoutStyle" >

        <ImageView
            style="@style/LeftMenuItemImageViewStyle"
            android:background="@drawable/selector_left_menu_life"
            android:contentDescription="@null" />

        <TextView
            style="@style/LeftMenuItemTextViewStyle"
            android:text="@string/left_menu_life" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_menu_item_pic"
        style="@style/MenuItemLayoutStyle" >

        <ImageView
            style="@style/LeftMenuItemImageViewStyle"
            android:background="@drawable/selector_left_menu_pic"
            android:contentDescription="@null" />

        <TextView
            style="@style/LeftMenuItemTextViewStyle"
            android:text="@string/picture" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#d2d2d2"
        android:visibility="gone" />

</LinearLayout>