<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@color/dark_green">

            <EditText
                android:id="@+id/et_drug_search"
                android:padding="3dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/drug_info"
                android:textColor="@color/dark_gray"
                android:background="@drawable/rounded_edittext"/>

            <ImageView
                android:id="@+id/iv_drug_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/actionbar_search_icon"/>

        </LinearLayout>



        <FrameLayout
            android:id="@+id/fl_drug_classify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_tab_pressed"
            android:textColor="@color/dark_gray"
            android:padding="5dp"
            android:textSize="16sp"
            android:text="@string/hot_drug"/>

        <FrameLayout
            android:id="@+id/fl_drug_hot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_tab_pressed"
            android:textColor="@color/dark_gray"
            android:padding="5dp"
            android:textSize="16sp"
            android:text="@string/recent_drug"/>

        <FrameLayout
            android:id="@+id/fl_drug_recent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</ScrollView>