<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:background="@drawable/list_item_bg_normal">

            <RelativeLayout
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_tab_pressed">

                <TextView
                    android:id="@+id/tv_drug_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:textColor="@color/dark_gray"
                    android:text="@string/drug_info"/>

                <TextView
                    android:id="@+id/tv_drug_info_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/dark_gray"
                    android:text="@string/more"/>

            </RelativeLayout>

            <com.victor.vhealth.widget.MyGridView
                android:id="@+id/gv_drug"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnWidth="64dp"
                android:gravity="center_vertical"
                android:numColumns="auto_fit"
                android:verticalSpacing="10dp">
            </com.victor.vhealth.widget.MyGridView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:background="@drawable/list_item_bg_normal">

            <RelativeLayout
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_tab_pressed">

                <TextView
                    android:id="@+id/tv_disease_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:textColor="@color/dark_gray"
                    android:text="@string/disease_info"/>

                <TextView
                    android:id="@+id/tv_disease_info_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/dark_gray"
                    android:text="@string/more"/>

            </RelativeLayout>

            <com.victor.vhealth.widget.MyGridView
                android:id="@+id/gv_disease"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnWidth="64dp"
                android:gravity="center_vertical"
                android:numColumns="auto_fit"
                android:verticalSpacing="10dp">
            </com.victor.vhealth.widget.MyGridView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:background="@drawable/list_item_bg_normal">

            <RelativeLayout
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_tab_pressed">

                <TextView
                    android:id="@+id/tv_hospital_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:textColor="@color/dark_gray"
                    android:text="@string/hospital_info"/>

                <TextView
                    android:id="@+id/tv_hospital_info_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/dark_gray"
                    android:text="@string/more"/>

            </RelativeLayout>

            <com.victor.vhealth.widget.MyGridView
                android:id="@+id/gv_hospital"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnWidth="64dp"
                android:gravity="center_vertical"
                android:numColumns="auto_fit"
                android:verticalSpacing="10dp">
            </com.victor.vhealth.widget.MyGridView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:background="@drawable/list_item_bg_normal">

            <RelativeLayout
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_tab_pressed">

                <TextView
                    android:id="@+id/tv_pharmacy_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:textColor="@color/dark_gray"
                    android:text="@string/pharmacy_info"/>

                <TextView
                    android:id="@+id/tv_pharmacy_info_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/dark_gray"
                    android:text="@string/more"/>

            </RelativeLayout>

            <com.victor.vhealth.widget.MyGridView
                android:id="@+id/gv_pharmacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnWidth="64dp"
                android:gravity="center_vertical"
                android:numColumns="auto_fit"
                android:verticalSpacing="10dp">
            </com.victor.vhealth.widget.MyGridView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:background="@drawable/list_item_bg_normal">

            <RelativeLayout
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_tab_pressed">

                <TextView
                    android:id="@+id/tv_company_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:textColor="@color/dark_gray"
                    android:text="@string/pharmaceutical_companies_info"/>

                <TextView
                    android:id="@+id/tv_company_info_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/dark_gray"
                    android:text="@string/more"/>

            </RelativeLayout>

            <com.victor.vhealth.widget.MyGridView
                android:id="@+id/gv_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnWidth="64dp"
                android:gravity="center_vertical"
                android:numColumns="auto_fit"
                android:verticalSpacing="10dp">
            </com.victor.vhealth.widget.MyGridView>

        </LinearLayout>

    </LinearLayout>

</ScrollView>